nova_tests/strings/neg/plan131_ptr_arith_sub_pos.nv
// Plan 131 Ф.2 — pointer subtraction: (p + 3) - p = 3 elements.
// EXPECT_OUTPUT: 3

module neg.plan131_ptr_arith_sub_pos

import std.runtime.raw_mem.{RawMem}

fn main() -> () {
    unsafe {
        ro p = RawMem.alloc(3 * size_of[int]()) as *mut int
        ro q = p + 3
        ro diff = q - p
        println(diff as int)
    }
}
